--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>EtsyAPIHack</title>
+	<title>Sartorial</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/clearfix-borderbox.css">
 	<link rel="stylesheet" href="css/reset.css">
+	<link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
 
 	<script src="js/jquery.js"></script>
     <script src="js/app.js"></script>
@@ -13,6 +14,248 @@
 </head>
 <body>
 
+	<div class="wrapper">
+		<div class="header-wrapper">
+
+			<img src="images/sartorial-logo.png" class="logo-pic" alt="pic of woman">
+			
+			<div class="about">
+				<a href="">About</a>
+			</div>
+		</div>
+
+		<div class="main-content-wrapper">
+			<div class="shirt clearfix">
+				<div class="image-wrapper">
+					<img src="images/dress.jpg" class="list-img" alt="picture">
+				</div>
+
+				<div class="details clearfix">
+					<div class="description-wrapper clearfix">
+						<h3 class="description-title">
+							Description
+						</h3>
+
+						<div class="seller-info">
+							<h2>Seller: </h2>
+							<a href="#">thaitee</a>
+
+							<div class="favorite-wrapper">
+								<button class="favorite">Favorite
+									<span class="icon"></span>
+								</button>
+							</div>
+			    		</div>
+
+						<p class="description">
+							This new printed harem pant has elastic waist tie, features screen printed on one side of the leg which added unique style for these pant 
+
+							it's a harem, and it's adorable. this trendy pant spices up your look and so comfy. Wear it with flats or gladiators, and look fantastic.
+
+							Measurement 
+							...<a href="#" class="read-more">More</a>
+						</p>
+
+						<div class="overview">
+							<h2>Overview</h2>
+							<ul class="overview-list">
+								<li>Handmade Item</li>
+								<li>Material: Cotton</li>
+								<li>Feedback: 3037 reviews</li>
+								<li>Ships Worldwide from Thailand</li>
+							</ul>
+					    </div>
+					</div>
+
+					<button class="add-cart">Add to Cart</button>
+					<button class="random">Randomize</button>
+
+                </div>
+				
+			</div>
+
+			<div class="pants clearfix">
+				<img src="images/pants.jpg" class="list-img" alt="picture">
+				<div class="details clearfix">
+					<div class="description-wrapper clearfix">
+						<h3 class="description-title">
+							Description
+						</h3>
+
+						<div class="seller-info">
+							<h2>Seller: </h2>
+							<a href="#">thaitee</a>
+
+							<div class="favorite-wrapper">
+								<button class="favorite">Favorite
+									<span class="icon"></span>
+								</button>
+							</div>
+			    		</div>
+
+						<p class="description">
+							This new printed harem pant has elastic waist tie, features screen printed on one side of the leg which added unique style for these pant 
+
+							it's a harem, and it's adorable. this trendy pant spices up your look and so comfy. Wear it with flats or gladiators, and look fantastic.
+
+							Measurement 
+							...<a href="#" class="read-more">More</a>
+						</p>
+
+						<div class="overview">
+							<h2>Overview</h2>
+							<ul class="overview-list">
+								<li>Handmade Item</li>
+								<li>Material: Cotton</li>
+								<li>Feedback: 3037 reviews</li>
+								<li>Ships Worldwide from Thailand</li>
+							</ul>
+					    </div>
+					</div>
+
+					<button class="add-cart">Add to Cart</button>
+					<button class="random">Randomize</button>
+
+                </div>
+			</div>
+
+			<div class="shoes clearfix">
+				<img src="images/shoes.jpg" class="list-img" alt="picture">
+				<div class="details clearfix">
+					<div class="description-wrapper clearfix">
+						<h3 class="description-title">
+							Description
+						</h3>
+
+						<div class="seller-info">
+							<h2>Seller: </h2>
+							<a href="#">thaitee</a>
+
+							<div class="favorite-wrapper">
+								<button class="favorite">Favorite
+									<span class="icon"></span>
+								</button>
+							</div>
+			    		</div>
+
+						<p class="description">
+							This new printed harem pant has elastic waist tie, features screen printed on one side of the leg which added unique style for these pant 
+
+							it's a harem, and it's adorable. this trendy pant spices up your look and so comfy. Wear it with flats or gladiators, and look fantastic.
+
+							Measurement 
+							...<a href="#" class="read-more">More</a>
+						</p>
+
+						<div class="overview">
+							<h2>Overview</h2>
+							<ul class="overview-list">
+								<li>Handmade Item</li>
+								<li>Material: Cotton</li>
+								<li>Feedback: 3037 reviews</li>
+								<li>Ships Worldwide from Thailand</li>
+							</ul>
+					    </div>
+					</div>
+
+					<button class="add-cart">Add to Cart</button>
+					<button class="random">Randomize</button>
+
+                </div>
+			</div>
+
+			<div class="jewelry clearfix">
+				<img src="images/jewelry.jpg" class="list-img" alt="picture">
+				<div class="details clearfix">
+					<div class="description-wrapper clearfix">
+						<h4 class="description-title">
+							Description
+						</h4>
+
+						<div class="seller-info">
+							<h2>Seller: </h2>
+							<a href="#">thaitee</a>
+
+							<div class="favorite-wrapper">
+								<button class="favorite">Favorite
+									<span class="icon"></span>
+								</button>
+							</div>
+			    		</div>
+
+						<p class="description">
+							This new printed harem pant has elastic waist tie, features screen printed on one side of the leg which added unique style for these pant 
+
+							it's a harem, and it's adorable. this trendy pant spices up your look and so comfy. Wear it with flats or gladiators, and look fantastic.
+
+							Measurement 
+							...<a href="#" class="read-more">More</a>
+						</p>
+
+						<div class="overview">
+							<h2>Overview</h2>
+							<ul class="overview-list">
+								<li>Handmade Item</li>
+								<li>Material: Cotton</li>
+								<li>Feedback: 3037 reviews</li>
+								<li>Ships Worldwide from Thailand</li>
+							</ul>
+					    </div>
+					</div>
+
+					<button class="add-cart">Add to Cart</button>
+					<button class="random">Randomize</button>
+
+                </div>
+			</div>
+
+			<div class="bags clearfix">
+				<img src="images/bag.jpg" class="list-img" alt="picture">
+				<div class="details clearfix">
+					<div class="description-wrapper clearfix">
+						<h3 class="description-title">
+							Description
+						</h3>
+
+						<div class="seller-info">
+							<h2>Seller: </h2>
+							<a href="#">thaitee</a>
+
+							<div class="favorite-wrapper">
+								<button class="favorite">Favorite
+									<span class="icon"></span>
+								</button>
+							</div>
+			    		</div>
+
+						<p class="description">
+							This new printed harem pant has elastic waist tie, features screen printed on one side of the leg which added unique style for these pant 
+
+							it's a harem, and it's adorable. this trendy pant spices up your look and so comfy. Wear it with flats or gladiators, and look fantastic.
+
+							Measurement 
+							...<a href="#" class="read-more">More</a>
+						</p>
+
+						<div class="overview">
+							<h2>Overview</h2>
+							<ul class="overview-list">
+								<li>Handmade Item</li>
+								<li>Material: Cotton</li>
+								<li>Feedback: 3037 reviews</li>
+								<li>Ships Worldwide from Thailand</li>
+							</ul>
+					    </div>
+					</div>
+
+					<button class="add-cart">Add to Cart</button>
+					<button class="random">Randomize</button>
+
+                </div>
+			</div>
+
+		</div>
+	</div>
 
 
 	
