--- a/index.html
+++ b/index.html
@@ -73,13 +73,7 @@
 					<div class="detail-wrapper clearfix">
 						<div class="seller-info" id="dressSeller">
 							<h2>Seller: </h2>
-							<a href="#"></a>
-
-							<div class="favorite-wrapper">
-								<button class="favorite">Favorite
-									<span class="icon"></span>
-								</button>
-							</div>
+							<a href="#" target="_blank"></a>
 					    </div>
 
 						<div class="overview">
@@ -146,7 +140,7 @@
 						</div>
 				    </div>
 					
-					<button class="add-cart">Add to Cart</button>
+					<button class="add-cart" id="dress-cart">Add to Cart</button>
 					<button class="random" id="pants-button">Randomize</button>
 
                 </div> <!-- End pants wrapper -->
