--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@
 								<li class="feedback">
 									<span class="score"></span> 
 								</li>
-								<li class="shipping">Ships <span class="shipto"></span> from <span class="shipfrom"></span></li>
+								<li class="shipping">Ships 
+									<span class="shipto"></span> 
+									from 
+									<span class="shipfrom"></span>
+								</li>
 							</ul>
 						</div>
 				    </div>
 					
-					<button class="add-cart">Add to Cart</button>
+					<button class="add-cart" id="dressBase">Add to Cart</button>
 					<button class="random" id="dress-button">Randomize</button>
 
                 </div>
