--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					
 					<div class="description-wrapper clearfix">
 						<h3 class="description-title">
-							Pants
+							Shirts
 						</h3>
 						<p class="description">
 							<span class="describe">Description: </span>
