--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="main-content-wrapper">
 			<div class="shirt clearfix">
 
-			<a href="#" target="_blank" class="list-img" id="shirt-pic"></a>
+				<a href="#" target="_blank" class="list-img" id="shirt-pic"></a>
 
 				<div class="details clearfix">
 					<div class="description-wrapper clearfix">
@@ -81,7 +81,7 @@
 							<ul class="overview-list hide">
 								<li class="handmade"></li>
 								<li class="material">
-									<span>Material:</span>
+									<span></span>
 								</li>
 								<li class="feedback">
 									<span class="score"></span> 
